--- a/StatistikaCasoveRady/StatistikaCasoveRady/View/mainPageView.xaml
+++ b/StatistikaCasoveRady/StatistikaCasoveRady/View/mainPageView.xaml
@@ -1,20 +1,69 @@
 ﻿<Page x:Class="StatistikaCasoveRady.View.MainPageView"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
       mc:Ignorable="d" 
-      d:DesignHeight="720" d:DesignWidth="720"
+             d:DesignHeight="900" d:DesignWidth="800"
+             Background="#E9E9E9"
       Title="mainPageView">
 
     <Grid>
-        <StackPanel Orientation="Vertical">
-            <StackPanel HorizontalAlignment="Left" VerticalAlignment="Top">
-                <DataGrid MaxHeight="500" MaxWidth="900" ItemsSource="{Binding Obedy}"></DataGrid>
-            </StackPanel>
-            <StackPanel  HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                <Button Content="Napln"></Button>
-            </StackPanel>
-        </StackPanel>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="2*" />
+        </Grid.ColumnDefinitions>
+        <DataGrid Grid.Row="0" x:Name="CasesDataGrid" Grid.Column="0" AutoGenerateColumns="False" SelectionUnit="FullRow" 
+                          SelectionMode="Extended" CanUserAddRows="False" GridLinesVisibility="Horizontal" ItemsSource="{Binding Obedy}">
+            <DataGrid.Columns>
+                <DataGridTextColumn Width="2*" Header="Datum" Binding="{Binding Datum, StringFormat='{}{0:dd/MM/yyyy}'}"/>
+                <DataGridTextColumn Width="*" Header="Cas" Binding="{Binding Cas, StringFormat='{}{0:H:mm}'}" />
+                <DataGridTextColumn Width="2*" Header="Zuctovano" Binding="{Binding Zuctovano}"/>
+                <DataGridTextColumn Width="5*" Header="Popis" Binding="{Binding Popis}"/>
+                <DataGridTextColumn Width="*" Header="Cena" Binding="{Binding Cena}"/>
+                <DataGridTextColumn Width="*" Header="Druh" Binding="{Binding Druh}"/> 
+            </DataGrid.Columns>
+        </DataGrid>
+        <Grid Grid.Row="0" Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <GroupBox Grid.Row="0" Grid.Column="0" Header="Počet Jídel v měsíci za období od 1.1 2014 - do 31.12.2017" VerticalAlignment="Stretch">
+                <lvc:CartesianChart Series="{Binding SeriesCollection}" LegendLocation="Left">
+                <lvc:CartesianChart.AxisX>
+                    <lvc:Axis Title="Salesman" Labels="{Binding Labels}"></lvc:Axis>
+                </lvc:CartesianChart.AxisX>
+                <lvc:CartesianChart.AxisY>
+                    <lvc:Axis Title="Sold Apps" LabelFormatter="{Binding Formatter}"></lvc:Axis>
+                </lvc:CartesianChart.AxisY>
+            </lvc:CartesianChart>
+            </GroupBox>
+            <GroupBox Grid.Row="0" Grid.Column="1" Header="Počet Jídel v jednotlivých letech" VerticalAlignment="Stretch">
+                <lvc:CartesianChart Series="{Binding SeriesCollectionLineChart}" LegendLocation="Right" >
+                    <lvc:CartesianChart.AxisY>
+                        <lvc:Axis Title="" LabelFormatter="{Binding YFormatterLineChart}"></lvc:Axis>
+                    </lvc:CartesianChart.AxisY>
+                    <lvc:CartesianChart.AxisX>
+                        <lvc:Axis Title="Month" Labels="{Binding Labels}"></lvc:Axis>
+                    </lvc:CartesianChart.AxisX>
+                </lvc:CartesianChart>
+            </GroupBox>
+
+
+            <GroupItem Grid.Row="1" Grid.Column="0">
+                    <Button Content="Napln" Command="{Binding ButtonClickCommand}"></Button>
+                </GroupItem>
+            </Grid>
+       
+        
     </Grid>
 </Page>
