--- a/StatistikaCasoveRady/StatistikaCasoveRady/View/mainPageView.xaml
+++ b/StatistikaCasoveRady/StatistikaCasoveRady/View/mainPageView.xaml
@@ -9,7 +9,27 @@
              Background="#E9E9E9"
       Title="mainPageView">
 
+
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="20" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+        <Grid Grid.Column="0" Grid.Row="0" Height="30">
+                <Menu>
+                    <MenuItem Header="File">
+                        <MenuItem Header="Nacist data">
+                        <MenuItem Header="Víchozí data" Command="{Binding NacistDefaultniDataCommand}"/>
+                        <MenuItem Header="Vlastni data" Command="{Binding NacistValstniDataCommand}"/>
+                    </MenuItem>
+                        <MenuItem Header="O programu"/>
+                    </MenuItem>
+                </Menu>
+        </Grid>
+        <Grid Grid.Column="0" Grid.Row="1">
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
@@ -48,12 +68,12 @@
             </lvc:CartesianChart>
             </GroupBox>
             <GroupBox Grid.Row="0" Grid.Column="1" Header="Počet Jídel v jednotlivých letech" VerticalAlignment="Stretch">
-                <lvc:CartesianChart Series="{Binding SeriesCollectionLineChart}" LegendLocation="Right" >
+                    <lvc:CartesianChart Series="{Binding GrafLine.SeriesCollection}" LegendLocation="Right" >
                     <lvc:CartesianChart.AxisY>
-                        <lvc:Axis Title="" LabelFormatter="{Binding YFormatterLineChart}"></lvc:Axis>
+                            <lvc:Axis Title="" LabelFormatter="{Binding GrafLine.YFormatter}"></lvc:Axis>
                     </lvc:CartesianChart.AxisY>
                     <lvc:CartesianChart.AxisX>
-                        <lvc:Axis Title="Month" Labels="{Binding Labels}"></lvc:Axis>
+                            <lvc:Axis Title="Month" Labels="{Binding GrafLine.Labels}"></lvc:Axis>
                     </lvc:CartesianChart.AxisX>
                 </lvc:CartesianChart>
             </GroupBox>
@@ -63,7 +83,6 @@
                     <Button Content="Napln" Command="{Binding ButtonClickCommand}"></Button>
                 </GroupItem>
             </Grid>
-       
-        
+        </Grid>
     </Grid>
 </Page>
