--- a/StatistikaCasoveRady/StatistikaCasoveRady/View/mainPageView.xaml
+++ b/StatistikaCasoveRady/StatistikaCasoveRady/View/mainPageView.xaml
@@ -5,10 +5,9 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
       mc:Ignorable="d" 
-             d:DesignHeight="900" d:DesignWidth="800"
-             Background="#E9E9E9"
+      d:DesignHeight="900" d:DesignWidth="800"
+      Background="#E9E9E9"
       Title="mainPageView">
-
 
     <Grid>
         <Grid.RowDefinitions>
@@ -20,7 +19,7 @@
                     </Grid.ColumnDefinitions>
         <Grid Grid.Column="0" Grid.Row="0" Height="30">
                 <Menu>
-                    <MenuItem Header="File">
+                    <MenuItem Header="Možnosti">
                         <MenuItem Header="Nacist data">
                         <MenuItem Header="Víchozí data" Command="{Binding NacistDefaultniDataCommand}"/>
                         <MenuItem Header="Vlastni data" Command="{Binding NacistValstniDataCommand}"/>
@@ -37,7 +36,7 @@
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="2*" />
         </Grid.ColumnDefinitions>
-        <DataGrid Grid.Row="0" x:Name="CasesDataGrid" Grid.Column="0" AutoGenerateColumns="False" SelectionUnit="FullRow" 
+        <DataGrid Margin="10" Grid.Row="0" x:Name="CasesDataGrid" Grid.Column="0" AutoGenerateColumns="False" SelectionUnit="FullRow" 
                           SelectionMode="Extended" CanUserAddRows="False" GridLinesVisibility="Horizontal" ItemsSource="{Binding Obedy}">
             <DataGrid.Columns>
                 <DataGridTextColumn Width="2*" Header="Datum" Binding="{Binding Datum, StringFormat='{}{0:dd/MM/yyyy}'}"/>
@@ -57,29 +56,48 @@
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <GroupBox Grid.Row="0" Grid.Column="0" Header="Počet Jídel v měsíci za období od 1.1 2014 - do 31.12.2017" VerticalAlignment="Stretch">
+                <GroupBox Margin="5" BorderBrush="Black" Grid.Row="0" Grid.Column="0" Header="Počet Jídel v měsíci za období od 1.1 2014 - do 31.12.2017" VerticalAlignment="Stretch">
                 <lvc:CartesianChart Series="{Binding SeriesCollection}" LegendLocation="Left">
                 <lvc:CartesianChart.AxisX>
-                    <lvc:Axis Title="Salesman" Labels="{Binding Labels}"></lvc:Axis>
+                            <lvc:Axis Title="Měsíce" Labels="{Binding Labels}"></lvc:Axis>
                 </lvc:CartesianChart.AxisX>
                 <lvc:CartesianChart.AxisY>
-                    <lvc:Axis Title="Sold Apps" LabelFormatter="{Binding Formatter}"></lvc:Axis>
+                            <lvc:Axis Title="Počet jídel" LabelFormatter="{Binding Formatter}"></lvc:Axis>
                 </lvc:CartesianChart.AxisY>
             </lvc:CartesianChart>
             </GroupBox>
-            <GroupBox Grid.Row="0" Grid.Column="1" Header="Počet Jídel v jednotlivých letech" VerticalAlignment="Stretch">
+                <GroupBox Margin="5" BorderBrush="Black" Grid.Row="0" Grid.Column="1" Header="Počet Jídel v jednotlivých letech" VerticalAlignment="Stretch">
                     <lvc:CartesianChart Series="{Binding GrafLine.SeriesCollection}" LegendLocation="Right" >
                     <lvc:CartesianChart.AxisY>
-                            <lvc:Axis Title="" LabelFormatter="{Binding GrafLine.YFormatter}"></lvc:Axis>
+                            <lvc:Axis Title="Počet jídel" LabelFormatter="{Binding GrafLine.YFormatter}"></lvc:Axis>
                     </lvc:CartesianChart.AxisY>
                     <lvc:CartesianChart.AxisX>
-                            <lvc:Axis Title="Month" Labels="{Binding GrafLine.Labels}"></lvc:Axis>
+                            <lvc:Axis Title="Měsíc" Labels="{Binding GrafLine.Labels}"></lvc:Axis>
                     </lvc:CartesianChart.AxisX>
                 </lvc:CartesianChart>
             </GroupBox>
+                <GroupBox Margin="5" Header="Další informace"  BorderBrush="Black" Grid.Row="1" Grid.Column="0">
+                    <GroupItem>
+                        <StackPanel>
+                            <StackPanel Orientation="Horizontal">
+                                <Label Content="Nejčastější polévka: "/>
+                                <Label Content="{Binding NejPolevka}"/>
+                            </StackPanel>
 
-
-            <GroupItem Grid.Row="1" Grid.Column="0">
+                            <StackPanel Orientation="Horizontal">
+                                <Label Content="Nejčastější hlavní chod: "/>
+                                <Label Content="{Binding NejHlavniJidlo}"/>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal">
+                                <Label Content="Nejčastější salát: "/>
+                                <Label Content="{Binding NejSalat}"/>
+                            </StackPanel>
+                        </StackPanel>
+                    </GroupItem>
+                    
+                  
+                </GroupBox>
+            <GroupItem Grid.Row="1" Grid.Column="1">
                     <Button Content="Napln" Command="{Binding ButtonClickCommand}"></Button>
                 </GroupItem>
             </Grid>
