--- a/StatistikaCasoveRady/StatistikaCasoveRady/WindowView/GraphWindow.xaml
+++ b/StatistikaCasoveRady/StatistikaCasoveRady/WindowView/GraphWindow.xaml
@@ -1,19 +1,34 @@
-﻿<Window x:Class="StatistikaCasoveRady.WindowView.GraphWindow"
+﻿<Window x:Class="StatistikaCasoveRady.WindowView.oprogramuWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
         mc:Ignorable="d"
-        Title="GraphWindow" Height="400" Width="400">
+        Title="O programu" Height="300" Width="300">
     <Grid>
-        <lvc:CartesianChart Series="{Binding SeriesCollection}" LegendLocation="Left">
-            <lvc:CartesianChart.AxisX>
-                <lvc:Axis Title="Salesman" Labels="{Binding Labels}"></lvc:Axis>
-            </lvc:CartesianChart.AxisX>
-            <lvc:CartesianChart.AxisY>
-                <lvc:Axis Title="Sold Apps" LabelFormatter="{Binding Formatter}"></lvc:Axis>
-            </lvc:CartesianChart.AxisY>
-        </lvc:CartesianChart>
+        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+            <GroupItem>
+                <StackPanel HorizontalAlignment="Center">
+                    <Label Content="Semestralni prace na INTP"></Label>
+                </StackPanel>
+            </GroupItem>
+            <GroupItem >
+                <StackPanel>
+                    <Label Content="Zpracování číselných řad dat z ISKAM"></Label>
+                </StackPanel>
+            </GroupItem>
+            <GroupItem >
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                    <Label Content="Autor:"></Label>
+                    <Label Content="Tomáš Zachoval" FontWeight="Bold"></Label>
+                </StackPanel>
+            </GroupItem>
+            <GroupItem >
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                    <Label Content="fakulta:"></Label>
+                    <Label Content="FEI" FontWeight="Bold"></Label>
+                </StackPanel>
+            </GroupItem>
+        </StackPanel>
     </Grid>
 </Window>
